[metadata]
name = bfield
version = 0.9.1
author = Zygmunt Krynicki
author_email = me@zygoon.pl
description = Convenient bit fields for int subclasses
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development
platform = any
url = https://new.zygoon.pl/software/bfield/
long_description: file: README.rst

[options]
zip_safe = True
py_modules = bfield
test_suite = test_bfield

[flake8]
author-re = ^Zygmunt Krynicki <me@zygoon.pl>$
copyright-re = ^Copyright \(c\) 2017 Zygmunt Krynicki.$
license-re = ^MIT$

[mypy]
disallow_untyped_calls=True
disallow_untyped_defs=True
check_untyped_defs=True
disallow_subclassing_any=True
warn_redundant_casts=True
warn_return_any=True
warn_unused_ignores=True
no_implicit_optional=True
strict_optional=True

[bdist_wheel]
universal=True
